name: esym
version: 0.5
synopsis: EVM symbolic executor
homepage: https://github.com/dapphub/esym
license: AGPL-3
license-file: COPYING
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >=1.10

executable esym
  main-is: Esym.hs
  default-language: Haskell2010
  build-depends:
    base >= 4.9 && < 4.10,
    mtl,
    aeson,
    text,
    bytestring,
    base16-bytestring
